HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiSafeRecordApplyGenericUnbounded/Expected.uv
//! Expected diagnostic metadata for the FfiSafeRecordApplyGenericUnbounded rejected-source specimen.

expectedDiagnostic("E-TYP-2629", "rule.23.FfiSafe-Record-Apply-Generic-Unbounded-Err")
